chore: fix subnav menu alignment

--- a/js/apps/system/_admin/aardvark/APP/frontend/scss/_subNavbar.scss
+++ b/js/apps/system/_admin/aardvark/APP/frontend/scss/_subNavbar.scss
@@ -167,8 +167,9 @@
   }
 
   .infoEntry {
-
-    line-height: 45px;
+    line-height: 60px;
+    margin-top: 0;
+    margin-bottom: 0;
 
     a {
       margin-right: 5px;
